fixed layout bug and created the component folder structure

--- a/src/index.css
+++ b/src/index.css
@@ -14,33 +14,27 @@
 }
 
 body {
-    margin: 0;
     padding: 0;
-    height: 100vh; /* vh is more reliable than dvh */
-    width: 100vw;  /* vw is more reliable than dvw */
+    margin: 0;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 #root {
-    display: grid;
-    grid-template-areas:
-        "header"
-        "main"
-        "footer";
-    grid-template-rows: 50px 1fr 50px;
+    display: flex;
+    flex-direction: column;
     width: 100%;  /* Ensures it takes full width */
     height: 100%; /* Ensures it takes full height */
+    padding: 0.5rem;
 }
 
 header {
-    grid-area: header;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 5px;
+    padding: 2rem;
 }
 
 header img {
@@ -49,11 +43,11 @@ header img {
 }
 
 main {
-    grid-area: main;
+    flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    margin-top: 2rem;
 }
 
 form {
@@ -63,15 +57,17 @@ form {
     gap: 20px;
     padding: 5px;
 }
-.flashCards{
+
+.flashCards {
     margin-top: 3rem;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     gap: 20px;
-    width: 100%;
+    width: 75%;
 }
+
 .flashCard {
     border-radius: 20px;
     background-color: #323949;
@@ -79,12 +75,16 @@ form {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: calc(95% / 3);
     padding: 2rem 0;
+    flex: 1 1 auto;
+}
+
+.flashCard:hover {
+    cursor: pointer;
+    background: rgba(50, 57, 73, 0.68);
 }
 
 footer {
-    grid-area: footer;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -93,4 +93,15 @@ footer {
 
 footer img {
     width: 12px;
+}
+
+@media only screen and (max-width: 720px) {
+    form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        padding: 5px;
+    }
 }
